# terminal

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.beads/: issues.jsonl  metadata.json
.beads/dolt/beads/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/beads/.dolt/stats/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/beads_file-browser/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.github/workflows/: release.yml
.opencode/: opencode.json
src/: main.rs
