[package]
name = "file-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
ftui = { path = "/home/krystian/frankentui/crates/ftui" }
ftui-core = { path = "/home/krystian/frankentui/crates/ftui-core" }
ftui-render = { path = "/home/krystian/frankentui/crates/ftui-render" }
ftui-style = { path = "/home/krystian/frankentui/crates/ftui-style" }
ftui-text = { path = "/home/krystian/frankentui/crates/ftui-text" }
ftui-layout = { path = "/home/krystian/frankentui/crates/ftui-layout" }
ftui-runtime = { path = "/home/krystian/frankentui/crates/ftui-runtime" }
ftui-widgets = { path = "/home/krystian/frankentui/crates/ftui-widgets" }
ftui-extras = { path = "/home/krystian/frankentui/crates/ftui-extras", features = ["markdown", "syntax"] }
