[package]
name = "file-browser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "terminal"
path = "src/main.rs"

[dependencies]
ftui = { git = "https://github.com/Dicklesworthstone/frankentui.git" }
ftui-core = { git = "https://github.com/Dicklesworthstone/frankentui.git" }
ftui-render = { git = "https://github.com/Dicklesworthstone/frankentui.git" }
ftui-style = { git = "https://github.com/Dicklesworthstone/frankentui.git" }
ftui-text = { git = "https://github.com/Dicklesworthstone/frankentui.git" }
ftui-layout = { git = "https://github.com/Dicklesworthstone/frankentui.git" }
ftui-runtime = { git = "https://github.com/Dicklesworthstone/frankentui.git" }
ftui-widgets = { git = "https://github.com/Dicklesworthstone/frankentui.git" }
ftui-extras = { git = "https://github.com/Dicklesworthstone/frankentui.git", features = ["markdown", "syntax"] }
